# CY4/mongodb/docs/swagger.json
@@ -70,6 +70,36 @@
                         "description": "Filtrar por autor do livro",
                         "required": false,
                         "type": "string"
+                    },
+                    {
+                        "name": "pageNumber",
+                        "in": "query",
+                        "description": "Número da página que o usuário quer visualizar",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "pageSize",
+                        "in": "query",
+                        "description": "Quantidade de livros por página",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "sortBy",
+                        "in": "query",
+                        "description": "Campo pelo qual os resultados serão ordenados. Exemplo: título, ano, autor",
+                        "required": false,
+                        "type": "string",
+                        "enum": ["title", "year", "author"]
+                    },
+                    {
+                        "name": "order",
+                        "in": "query",
+                        "description": "Ordem de classificação: 'asc' para crescente, 'desc' para decrescente",
+                        "required": false,
+                        "type": "string",
+                        "enum": ["asc", "desc"]
                     }
                 ],
                 "responses": {
